{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 188,
  "lineage": "65f8c95b-bc40-070f-feeb-1a89c41e1d07",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "host_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377111628:security-group/sg-096a6ad8e97361e8a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-096a6ad8e97361e8a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tmw-paylite-host",
            "name_prefix": "",
            "owner_id": "891377111628",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev-free",
              "Project": "tmw-paylite"
            },
            "tags_all": {
              "Env": "dev-free",
              "Project": "tmw-paylite"
            },
            "timeouts": null,
            "vpc_id": "vpc-033f91575311a12c7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377111628",
            "id": "sg-096a6ad8e97361e8a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.net.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.host",
      "mode": "managed",
      "type": "aws_instance",
      "name": "host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ca5a2f40c2601df6",
            "arn": "arn:aws:ec2:us-east-1:891377111628:instance/i-0a5f8a19e6f65ee20",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "tmw-paylite-devfree-profile",
            "id": "i-0a5f8a19e6f65ee20",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f5a0205d03ee860b",
            "private_dns": "ip-10-20-7-135.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.7.135",
            "public_dns": "ec2-13-223-0-246.compute-1.amazonaws.com",
            "public_ip": "13.223.0.246",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:891377111628:key/af1c1249-41d4-4cab-b1c0-7cac4f84c5c6",
                "throughput": 125,
                "volume_id": "vol-028c042cc5774aa01",
                "volume_size": 16,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b80d5a4e14178e5e",
            "tags": {
              "Env": "dev-free",
              "Name": "tmw-paylite-devfree",
              "Project": "tmw-paylite"
            },
            "tags_all": {
              "Env": "dev-free",
              "Name": "tmw-paylite-devfree",
              "Project": "tmw-paylite"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-096a6ad8e97361e8a"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.host_sg",
            "data.aws_ssm_parameter.ubuntu_2404_amd64",
            "module.host.aws_iam_instance_profile.profile",
            "module.host.aws_iam_role.role",
            "module.host.data.aws_iam_policy_document.assume",
            "module.net.aws_subnet.public",
            "module.net.aws_vpc.this",
            "module.net.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377111628:internet-gateway/igw-03b94d44ad0747713",
            "id": "igw-03b94d44ad0747713",
            "owner_id": "891377111628",
            "region": "us-east-1",
            "tags": {
              "Env": "dev-free",
              "Name": "tmw-paylite-igw",
              "Project": "tmw-paylite"
            },
            "tags_all": {
              "Env": "dev-free",
              "Name": "tmw-paylite-igw",
              "Project": "tmw-paylite"
            },
            "vpc_id": "vpc-033f91575311a12c7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.net.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_route",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03b94d44ad0747713",
            "id": "r-rtb-0288057e5f2385cb51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0288057e5f2385cb5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.net.aws_internet_gateway.igw",
            "module.net.aws_route_table.public",
            "module.net.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377111628:route-table/rtb-0288057e5f2385cb5",
            "id": "rtb-0288057e5f2385cb5",
            "owner_id": "891377111628",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Env": "dev-free",
              "Name": "tmw-paylite-public-rt",
              "Project": "tmw-paylite"
            },
            "tags_all": {
              "Env": "dev-free",
              "Name": "tmw-paylite-public-rt",
              "Project": "tmw-paylite"
            },
            "timeouts": null,
            "vpc_id": "vpc-033f91575311a12c7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.net.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f1efdab3eddcd81",
            "region": "us-east-1",
            "route_table_id": "rtb-0288057e5f2385cb5",
            "subnet_id": "subnet-0b80d5a4e14178e5e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.net.aws_route_table.public",
            "module.net.aws_subnet.public",
            "module.net.aws_vpc.this",
            "module.net.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd08db849a5239f6",
            "region": "us-east-1",
            "route_table_id": "rtb-0288057e5f2385cb5",
            "subnet_id": "subnet-01dc0d3beca84b5cf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.net.aws_route_table.public",
            "module.net.aws_subnet.public",
            "module.net.aws_vpc.this",
            "module.net.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377111628:subnet/subnet-0b80d5a4e14178e5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b80d5a4e14178e5e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377111628",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Env": "dev-free",
              "Name": "tmw-paylite-public-0",
              "Project": "tmw-paylite",
              "Tier": "public"
            },
            "tags_all": {
              "Env": "dev-free",
              "Name": "tmw-paylite-public-0",
              "Project": "tmw-paylite",
              "Tier": "public"
            },
            "vpc_id": "vpc-033f91575311a12c7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377111628",
            "id": "subnet-0b80d5a4e14178e5e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.net.aws_vpc.this",
            "module.net.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377111628:subnet/subnet-01dc0d3beca84b5cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01dc0d3beca84b5cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377111628",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Env": "dev-free",
              "Name": "tmw-paylite-public-1",
              "Project": "tmw-paylite",
              "Tier": "public"
            },
            "tags_all": {
              "Env": "dev-free",
              "Name": "tmw-paylite-public-1",
              "Project": "tmw-paylite",
              "Tier": "public"
            },
            "vpc_id": "vpc-033f91575311a12c7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377111628",
            "id": "subnet-01dc0d3beca84b5cf",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.net.aws_vpc.this",
            "module.net.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377111628:vpc/vpc-033f91575311a12c7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-07e284c1ae337c333",
            "default_route_table_id": "rtb-097afb0fed7425140",
            "default_security_group_id": "sg-09d59fae6a67c139a",
            "dhcp_options_id": "dopt-0ba0f7ef002d0cabd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-033f91575311a12c7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-097afb0fed7425140",
            "owner_id": "891377111628",
            "region": "us-east-1",
            "tags": {
              "Env": "dev-free",
              "Name": "tmw-paylite-vpc",
              "Project": "tmw-paylite"
            },
            "tags_all": {
              "Env": "dev-free",
              "Name": "tmw-paylite-vpc",
              "Project": "tmw-paylite"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}